# swreactxblock

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  CHANGELOG.md  LICENSE.TXT  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  asset-manifest.json  copy_assets.py  custom_build_backend.py  custom_installer.py  install_swpwr.py  modifyreactapp.sh  package.json  pyproject.toml  release.config.js  setup.cfg  setup.py  tox.ini  tsconfig.app.json  tsconfig.json  version.py
.github/: dependabot.yml
.github/workflows/: auto-assign.yml  precommitVersionBumps.yml  semanticVersionBump.yml
custom_build_backend/: README.md  __init__.py  backend.py  collect_reactapp.py  utils.py
install/: build_backend.py  collect_reactapp.py  utils.py
requirements/: dev.txt
scripts/: cleanpublic.sh  cpassets.sh
scripts/archive/: cpassets_phase1_2022.sh  cptestassets.sh  fixhtml.sh  fixjsurl.sh  modifyreactapp.sh  tarscppublic.sh
swpwrxblock/: .gitignore  README.md  __about__.py  __init__.py  const.py  cpassets.sh  cpassets_phase1_2022.sh  cptestassets.sh  fixcssurl.sh  fixjsurl.sh  post_install.py  swpwrxblock.py  tarcsppublic.sh  tardist.sh  updateme1.sh  updateme2.sh  updateme3.sh  utils.py
swpwrxblock/install/: build_backend.py
swpwrxblock/public/: App.css  App.tsx  DailyMotion--hitm7M8.js  DailyMotion-0zmveu-k.js  DailyMotion-6hPswVpb.js  DailyMotion-AdLjyivc.js  DailyMotion-B-icBYmS.js  DailyMotion-B04wYcXi.js  DailyMotion-B1hewxWB.js  DailyMotion-B1wxJBv1.js  DailyMotion-B96VTyUW.js  DailyMotion-B9MjRazg.js  DailyMotion-BES7br2m.js  DailyMotion-BJKvxqgE.js  DailyMotion-BMlxJyyg.js  DailyMotion-BOvYHyg3.js  DailyMotion-BUpUjcHc.js  DailyMotion-BUzIbAeG.js  DailyMotion-BWnzlkoM.js  DailyMotion-BXlCn9yf.js  DailyMotion-BiqU7O94.js  DailyMotion-Bnydcfbu.js  DailyMotion-Brh7OQEF.js  DailyMotion-By-BzhQf.js  DailyMotion-C-YS4YkS.js  DailyMotion-C5o91Pcp.js  DailyMotion-CFJeaGXR.js  DailyMotion-CKra4trI.js  DailyMotion-COFeILkj.js  DailyMotion-CPyhSLWk.js  DailyMotion-CQV3XBZX.js  DailyMotion-CW6uDKgq.js  DailyMotion-CaHPIrhV.js  DailyMotion-Cfm0eVN-.js  DailyMotion-CnXK_4EK.js  DailyMotion-CnrveFaP.js  DailyMotion-CotEBjwB.js  DailyMotion-Ctklrmmk.js  DailyMotion-CzDxqxJ3.js  DailyMotion-D3gW6jJM.js  (+1095 more)
swpwrxblock/public/assets/: app.css  app.js  app.js-decimal-point  app.js.bak
swpwrxblock_xblock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
swreactxblock/: __about__.py  __init__.py  const.py  post_install.py  swpwrxblock.py  swreactxblock.py  utils.py
(+40 files in other folders)
