[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stepwise-power-xblock"
version = "0.1.0"  # Replace with the actual version
description = "Stepwise Power XBlock"
license = { text = "MIT" }
dependencies = ["XBlock", "requests"]

[tool.setuptools]
packages = ["swpwrxblock"]
include-package-data = true

[tool.setuptools.package-data]
"swpwrxblock" = ["static/*", "public/*", "translations/*"]

[tool.setuptools.entry-points."xblock.v1"]
swpwrxblock = "swpwrxblock:SWPWRXBlock"