[build-system]
requires = ["setuptools", "wheel"]
build-backend = "install.build_backend.CustomBuildBackend"

[project]
name = "stepwise-power-xblock"
version = "18.0.1"
description = "Stepwise Power XBlock"
license = { text = "MIT" }
dependencies = ["XBlock", "requests"]

[project.entry-points."xblock.v1"]
swpwrxblock = "swpwrxblock:SWPWRXBlock"

[tool.setuptools]
packages = ["swpwrxblock"]
include-package-data = true

[tool.setuptools.package-data]
"swpwrxblock" = ["static/*", "public/*", "translations/*"]
