[build-system]
requires = ["setuptools", "wheel"]
build-backend = "custom_build_backend"

[project]
name = "stepwise-power-xblock"
version = "18.0.1"
description = "Stepwise Power XBlock"
license = { text = "MIT" }
dependencies = ["XBlock", "requests"]

[project.entry-points."xblock.v1"]
swpwrxblock = "swpwrxblock:SWPWRXBlock"

[tool.setuptools.packages.find]
where = ["."]
include = ["swpwrxblock*"]

[tool.setuptools.package-data]
"swpwrxblock" = ["static/*", "public/*", "translations/*"]
