[metadata]
name = stepwise-power-xblock
version = 0.1.0  # Replace with the actual version
description = Stepwise Power XBlock
license = MIT

[options]
packages = find:
install_requires =
    XBlock
    requests
include_package_data = true

[options.package_data]
swpwrxblock =
    static/*
    public/*
    translations/*

[options.entry_points]
xblock.v1 =
    swpwrxblock = swpwrxblock:SWPWRXBlock