[metadata]
name = stepwise-power-xblock
version = 18.0.1	# Needs to agree with version.py
description = Stepwise Power XBlock
license = MIT

[options]
packages = find:
install_requires =
    XBlock
    requests
include_package_data = true

[options.package_data]
swpwrxblock =
    static/*
    public/*
    translations/*

[options.entry_points]
xblock.v1 =
    swpwrxblock = swpwrxblock:SWPWRXBlock
